[project]
name = "kokoro-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "kokoro>=0.9.4",
    "numpy>=2.3.2",
    "pip>=25.1.1",
    "soundfile>=0.13.1",
    "streamlit>=1.47.1",
]
